# aether

./: .gitignore  CMakeLists.txt  analyze_callgrind.sh  game.lua
src/: accumulator.h  commands.h  coordinate.h  game_loop.h  hex_intensity_map_view.h  intensity_map.h  intensity_map_blur.h  intensity_map_noise.h  intensity_map_perlin.h  intensity_map_view.h  lua_interface.h  main.cc  observable.h  screen.h  sdl_utils.h  texture.h  ui_element.h  user_interface.h  utils.h
src/entities/: entity_storage.h  graphics_component.h  graphics_storage.h  physics_component.h  physics_storage.h
src/graphics/: colormaps.h  hex_intensity_map_view.h  image.h  map_view.h  screen.h  texture.h
src/map/: hex_coordinate.h  map.h  map_layer.h
src/ui/: terminal.h  ui_element.h  user_interface.h
